--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>3D Carousel Using TweenMax.js & jQuery | jQuery Post | jQuery Plugins</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<!-- <link rel="stylesheet" type="text/css" href="stylesheet.css"> -->
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 	
