--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 
 	<header>
-		<div style="margin-left:500px;width:200px;background-color: red;">
-			<h1 >Marcho Weh</h1>
+		<div style=>
+			<h1 style="color: white;">Marco Weh</h1>
 		</div>
 		
 
